--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+/* import neu font */
+@import url('https://fonts.cdnfonts.com/css/pp-neue-montreal');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   html {
-    font-family: "Inter", sans-serif;
+    font-family: "PP Neue Montreal", sans-serif;
   }
   :root {
     --radius: 0.5rem;
